# qtau

./: .gitignore  .gitmodules  QTau.pro  README.md  license.txt
QTau/: Controller.cpp  Events.h  NoteEvents.h  PluginInterfaces.h  Session.cpp  Session.h  Utils.cpp  Utils.h  main.cpp  mainwindow.cpp  mainwindow.h
QTau/audio/: File.cpp  qtmmPlayer.cpp  qtmmPlayer.h  vlcPlayer.cpp  vlcPlayer.h
QTau/qtsingleapplication/: qtlocalpeer.cpp  qtlocalpeer.h  qtsinglecoreapplication.cpp  qtsinglecoreapplication.h
QTau/ui/: dynDrawer.cpp  dynDrawer.h  mainwindow.ui  meter.cpp  meter.h  noteEditor.cpp  noteEditor.h  noteEditorHandlers.cpp  noteEditorHandlers.h  piano.cpp  piano.h
doc/synthesis_theory/: harmonic_phases.ps  myvocaltractresonances.ps  phase_vocoder.ps  svs.ps
editor/: Controller.cpp  Controller.h  Events.h  PluginInterfaces.h  Session.cpp  Session.h  Utils.h  main.cpp  mainwindow.cpp  mainwindow.h
editor/audio/: Codec.h  CodecBase.cpp  CodecBase.h  File.cpp  File.h  Player.cpp  Player.h  Source.cpp  Source.h  qtmmPlayer.cpp  qtmmPlayer.h  vlcPlayer.cpp
editor/res/: qtau.qrc
editor/ui/: Config.h  dynDrawer.h  meter.cpp  meter.h  noteEditor.cpp  noteEditor.h  noteEditorHandlers.cpp  noteEditorHandlers.h  piano.cpp  piano.h  waveform.cpp  waveform.h
tools/: FormantTester.pro
tools/CVEDSP/: FrameProcessor.c  FrameProcessor.h  Interpolation.c  Interpolation.h  Makefile.am  Makefile.in  Plot.c  Plot.h  Tester.c  Tester.h
tools/CVEDSP/DFT/: DFT.c  DFT.h  FFT.c  FFT.h  FFTBlock.h  FFTCommon.h  Makefile.in  Radix2.c  Radix2.h  Radix2Gen.c  Radix2Gen.h  SplitRadix.c  SplitRadix.h  SplitRadixGen.c  SplitRadixGen.h  StaticFFT_10.c  StaticFFT_10.h  StaticFFT_11.c  StaticFFT_11.h  StaticFFT_5.c  StaticFFT_6.c  StaticFFT_8.c
tools/CVEDSP/FreqDomain/: ControlPointFilter.c  ControlPointFilter.h  DFW.c  DFW.h  FDAnalysis.c  FDAnalysis.h  FECSOLA.c  FECSOLA.h  Filter.c  Filter.h  Formant.c  Formant.h  Makefile.in  Spectrum.c  Spectrum.h
tools/CVEDSP/IntrinUtil/: Calculation.c  Calculation.h  FloatArray.c  FloatArray.h  IntArray.c  IntArray.h  LogicArray.c  LogicArray.h  Makefile.in  Memory.c  Memory.h
tools/CVEDSP/TimeDomain/: Makefile.in  PSOLA.c  PSOLA.h  TDAnalysis.c  TDAnalysis.h  TDEffects.c  TDEffects.h  Window.c  Window.h
tools/build-RocaloidTool-Desktop_Qt_5_1_0_GCC_32bit-Debug/: Makefile  RocaTool  moc_Codec.cpp  moc_CodecBase.cpp  moc_Player.cpp  moc_Source.cpp  moc_Utils.cpp  moc_rocatool.cpp  moc_spectrum.cpp  qrc_res.cpp  ui_rocatool_window.h
tools/rocatool/: Interface.c  Interface.cpp  Interface.h  RocaloidTool.pro  RocaloidTool.pro.user.37edb38  main.cpp  res.qrc  rocatool.cpp  rocatool.h  rocatool.pro  rocatool_window.ui  spectrum.cpp  spectrum.h
tools/utauloid/: oto.cpp  ust.h
