## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)."\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = cvedsp

cvedsp_SOURCES = \
	main.c \
	DFT/FFT.c \
	DFT/FFT.h \
	DFT/StaticRev.c \
	DFT/StaticRev.h \
	DFT/StaticFFT_5.c \
	DFT/StaticFFT_5.h \
	DFT/StaticFFT_10.h \
	DFT/StaticFFT_10.c \
	DFT/DFT.c \
	DFT/DFT.h \
	DFT/StaticFFT_11.c \
	DFT/StaticFFT_11.h \
	DFT/StaticFFT_9.c \
	DFT/StaticFFT_9.h \
	DFT/StaticFFT_6.c \
	DFT/StaticFFT_6.h \
	DFT/StaticFFT_7.c \
	DFT/StaticFFT_7.h \
	DFT/StaticFFT_8.c \
	DFT/StaticFFT_8.h \
	DFT/StaticFFT_Small.c \
	DFT/StaticFFT_Small.h \
	IntrinUtil/Memory.c \
	IntrinUtil/Memory.h \
	IntrinUtil/FloatArray.c \
	IntrinUtil/FloatArray.h \
	Wave/wave_reader.c \
	Wave/wave_reader.h \
	Wave/wave_writer.c \
	Wave/wave_writer.h \
	IntrinUtil/Calculation.c \
	IntrinUtil/Calculation.h \
	Plot.c \
	Plot.h \
	IntrinUtil/LogicArray.c \
	IntrinUtil/LogicArray.h \
	IntrinUtil/IntArray.c \
	IntrinUtil/IntArray.h \
	TimeDomain/Window.c \
	TimeDomain/Window.h \
	TimeDomain/TDAnalysis.c \
	TimeDomain/TDAnalysis.h \
	TimeDomain/TDEffects.c \
	TimeDomain/TDEffects.h \
	FreqDomain/Filter.c \
	FreqDomain/Filter.h \
	DFT/Radix2.c \
	DFT/Radix2.h \
	DFT/SplitRadix.c \
	DFT/SplitRadix.h \
	DFT/FFTBlock.h \
	FreqDomain/Spectrum.c \
	FreqDomain/Spectrum.h \
	FreqDomain/FDAnalysis.c \
	FreqDomain/FDAnalysis.h \
	FrameProcessor.c \
	FrameProcessor.h \
	TimeDomain/PSOLA.c \
	TimeDomain/PSOLA.h \
	FreqDomain/DFW.c \
	FreqDomain/DFW.h \
	FreqDomain/ControlPointFilter.c \
	FreqDomain/ControlPointFilter.h \
	FreqDomain/Formant.c \
	FreqDomain/Formant.h \
	FreqDomain/FECSOLA.c \
	FreqDomain/FECSOLA.h \
	Tester.c \
	Tester.h \
	Interpolation.h \
	Interpolation.c \
	DFT/FFTCommon.h \
	DFT/Radix2Gen.c \
	DFT/Radix2Gen.h \
	DFT/SplitRadixGen.c \
	DFT/SplitRadixGen.h

cvedsp_CFLAGS = -lm \
	-msse \
	-msse2 \
	-mavx \
	-ffast-math \
	-Wall 

cvedsp_LDFLAGS = 

cvedsp_LDADD = 


SUBDIRS = \
	DFT \
	IntrinUtil \
	TimeDomain \
	FreqDomain

lib_LIBRARIES =  \
	libCVEDSP.a

libCVEDSP_a_SOURCES = \
	main.c \
	DFT/FFT.c \
	DFT/FFT.h \
	DFT/StaticRev.c \
	DFT/StaticRev.h \
	DFT/StaticFFT_5.c \
	DFT/StaticFFT_5.h \
	DFT/StaticFFT_10.h \
	DFT/StaticFFT_10.c \
	DFT/DFT.c \
	DFT/DFT.h \
	DFT/StaticFFT_11.c \
	DFT/StaticFFT_11.h \
	DFT/StaticFFT_9.c \
	DFT/StaticFFT_9.h \
	DFT/StaticFFT_6.c \
	DFT/StaticFFT_6.h \
	DFT/StaticFFT_7.c \
	DFT/StaticFFT_7.h \
	DFT/StaticFFT_8.c \
	DFT/StaticFFT_8.h \
	DFT/StaticFFT_Small.c \
	DFT/StaticFFT_Small.h \
	IntrinUtil/Memory.c \
	IntrinUtil/Memory.h \
	IntrinUtil/FloatArray.c \
	IntrinUtil/FloatArray.h \
	Wave/wave_reader.c \
	Wave/wave_reader.h \
	Wave/wave_writer.c \
	Wave/wave_writer.h \
	IntrinUtil/Calculation.c \
	IntrinUtil/Calculation.h \
	Plot.c \
	Plot.h \
	IntrinUtil/LogicArray.c \
	IntrinUtil/LogicArray.h \
	IntrinUtil/IntArray.c \
	IntrinUtil/IntArray.h \
	TimeDomain/Window.c \
	TimeDomain/Window.h \
	TimeDomain/TDAnalysis.c \
	TimeDomain/TDAnalysis.h \
	TimeDomain/TDEffects.c \
	TimeDomain/TDEffects.h \
	FreqDomain/Filter.c \
	FreqDomain/Filter.h \
	DFT/Radix2.c \
	DFT/Radix2.h \
	DFT/SplitRadix.c \
	DFT/SplitRadix.h \
	DFT/FFTBlock.h \
	FreqDomain/Spectrum.c \
	FreqDomain/Spectrum.h \
	FreqDomain/FDAnalysis.c \
	FreqDomain/FDAnalysis.h \
	FrameProcessor.c \
	FrameProcessor.h \
	TimeDomain/PSOLA.c \
	TimeDomain/PSOLA.h \
	FreqDomain/DFW.c \
	FreqDomain/DFW.h \
	FreqDomain/ControlPointFilter.c \
	FreqDomain/ControlPointFilter.h \
	FreqDomain/Formant.c \
	FreqDomain/Formant.h \
	FreqDomain/FECSOLA.c \
	FreqDomain/FECSOLA.h \
	Tester.c \
	Tester.h \
	Interpolation.h \
	Interpolation.c

libCVEDSP_a_CFLAGS = -lm \
	-msse \
	-msse2 \
	-mavx \
	-ffast-math \
	-Wall 
